# sae_eys

./: .gitignore  README.md  comparison.py  pyproject.toml  requirements.txt
notebooks/: activations.ipynb  comparison.ipynb  datagen.ipynb  hyperparameter_exploration.ipynb  initialization.ipynb  sample_size_robustness.ipynb
scripts/: comparison.py  hyperparameter_exploration.py  initialization.py  sample_size_robustness.py
src/: NestedPOD.py  __init__.py  activations.py  blocks.py  metrics.py  modules.py  training.py  utils.py
tests/: test_activations.py  test_blocks.py  test_metrics.py  test_modules.py  test_nested_pod.py  test_training.py  test_utils.py
